--- a/noticies/2016-08-02-SIC-Gestio-Dependencies-dotNET/index.html
+++ b/noticies/2016-08-02-SIC-Gestio-Dependencies-dotNET/index.html
@@ -363,7 +363,7 @@
 <li><strong>NuProj</strong>: Creador avançat de paquets NuGet amb intergació amb Visual Studio.</li>
 </ul>
 
-<p>Per a les llibreries de codi obert publicades al NuGet Gallery i per a les llibreries pròpies del proveïdor que es construeixen amb jobs de Jenkins <em>LIB</em> no caldrà fer cap tasca addicional. Per a la resta de llibreries, com per exemple el client d&rsquo;Oracle o llibreries de proveïdors que no tenen jobs de Jenkins <em>LIB</em>, caldrà facilitar-li al SIC el paquet Nuget o l&rsquo;artefacte <code>.dll</code> corresponent identificant l&rsquo;<em>arquitectura</em> (<strong>x86</strong> o <strong>x64</strong>), la <em>versió</em> i el <em>targetFramework</em>.</p>
+<p>Per a les llibreries de codi obert publicades al NuGet Gallery i per a les llibreries pròpies del proveïdor que es construeixen amb jobs de Jenkins <em>LIB</em> no caldrà fer cap tasca addicional. Per a la resta de llibreries, com per exemple el client d&rsquo;Oracle o llibreries de proveïdors que no tenen jobs de Jenkins <em>LIB</em>, caldrà facilitar-li al SIC el paquet NuGet o l&rsquo;artefacte <code>.dll</code> corresponent identificant l&rsquo;<em>arquitectura</em> (<strong>x86</strong> o <strong>x64</strong>), la <em>versió</em> i el <em>targetFramework</em>.</p>
 
 <p>Per a qualsevol dubte referent a la gestió de dependències amb NuGet al SIC  podeu <a href="http://canigo.ctti.gencat.cat/sic/peticions/">obrir una consulta</a> al servei “FRAMEWORK SIC” de SAU-Remedy.</p>
 
