--- a/destacats/canigo31-tomcat8-java8/index.html
+++ b/destacats/canigo31-tomcat8-java8/index.html
@@ -13,7 +13,7 @@
 
 	<script>
 		document.write("<meta name=\"titol\" content=\"Certificació Canigó 3.1 amb Tomcat 8 \x2b Oracle Java 8\" />");
-		document.write("<meta name=\"description\" content=\"Ha estat certificat el correcte funcionament de Canigó 3.1 en Tomcat 8 \x2b Oracle Java 8\" />");
+		document.write("<meta name=\"description\" content=\"Ha estat certificat el correcte funcionament de Canigó 3.1 en Tomcat 8 amb rutnime Oracle Java 8\" />");
 	</script>
 
 	
