--- a/destacats/canigo31-wl12-java8/index.html
+++ b/destacats/canigo31-wl12-java8/index.html
@@ -13,7 +13,7 @@
 
 	<script>
 		document.write("<meta name=\"titol\" content=\"Certificació Canigó 3.1 amb Weblogic 12c \x2b Oracle Java 8\" />");
-		document.write("<meta name=\"description\" content=\"Ha estat certificat el correcte funcionament de Canigó 3.1 en Weblogic 12c \x2b Oracle Java 8\" />");
+		document.write("<meta name=\"description\" content=\"Ha estat certificat el correcte funcionament de Canigó 3.1 en Weblogic 12c amb runtime Oracle Java 8\" />");
 	</script>
 
 	
