--- a/destacats/index.html
+++ b/destacats/index.html
@@ -363,7 +363,7 @@
         				
 
 						</h2>
-						<p> Ha estat certificat el correcte funcionament de Canigó 3.1 en Tomcat 8 + Oracle Java 8</p>
+						<p> Ha estat certificat el correcte funcionament de Canigó 3.1 en Tomcat 8 amb rutnime Oracle Java 8</p>
 					</div>	
 
 
@@ -393,7 +393,7 @@
         				
 
 						</h2>
-						<p> Ha estat certificat el correcte funcionament de Canigó 3.1 en Weblogic 12c + Oracle Java 8</p>
+						<p> Ha estat certificat el correcte funcionament de Canigó 3.1 en Weblogic 12c amb runtime Oracle Java 8</p>
 					</div>	
 
 
