--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 										BLOC. 
 									
 									Cloud-Ready</a> (15-09-2016)
-									<p>Aspectes a tenir en compte en la definició de l&#39;arquitectura d&#39;una aplicació per estar preprarada per anar al Cloud<br /><br /></p>
+									<p>Aspectes a tenir en compte en la definició de l&#39;arquitectura d&#39;una aplicació per estar preparada per anar al Cloud<br /><br /></p>
 								</li>
 							 
 								<li>
