--- a/canigo-documentacio-versions-anteriors/versio-1/index.html
+++ b/canigo-documentacio-versions-anteriors/versio-1/index.html
@@ -314,7 +314,13 @@
 
 					
 
-						<p><a href="https://github.com/cs-canigo/docs.canigo1.cs-canigo.github.io/archive/1.0.1.zip">1.0.1</a> (15/03/2016)</p>
+						
+
+<p>Des del següent <a href="http://canigo.ctti.gencat.cat/docs-canigo-v1/">enllaç</a> es pot descarregar la darrera versió de la documentació.</p>
+
+<h3 id="changelog:b7a803ae9a6303b4520f7c64775d6e1f">Changelog</h3>
+
+<p><a href="https://github.com/cs-canigo/docs.canigo1.cs-canigo.github.io/archive/1.0.1.zip">1.0.1</a> (15/03/2016)</p>
 
 <ul>
 <li><a href="http://cstd.ctti.gencat.cat/jiracstd/browse/CAN-2086">CAN-2086</a>: Actualitzada documentació connector Documentum per l&rsquo;upgrade a v7.1.</li>
