--- a/canigo-documentacio-versions-anteriors/versio-1/index.html
+++ b/canigo-documentacio-versions-anteriors/versio-1/index.html
@@ -316,7 +316,7 @@
 
 						
 
-<p>Des del següent <a href="http://canigo.ctti.gencat.cat/docs-canigo-v1/">enllaç</a> es pot descarregar la darrera versió de la documentació.</p>
+<p>Des del següent <a href="http://canigo.ctti.gencat.cat/docs-canigo-v1/">enllaç</a> es pot accedir a la darrera versió de la documentació.</p>
 
 <h3 id="changelog:b7a803ae9a6303b4520f7c64775d6e1f">Changelog</h3>
 
