--- a/canigo-documentacio-versions-anteriors/versio-2/index.html
+++ b/canigo-documentacio-versions-anteriors/versio-2/index.html
@@ -316,7 +316,7 @@
 
 						
 
-<p>Des del següent <a href="http://canigo.ctti.gencat.cat/docs-canigo-v2/">enllaç</a> es pot descarregar la darrera versió de la documentació.</p>
+<p>Des del següent <a href="http://canigo.ctti.gencat.cat/docs-canigo-v2/">enllaç</a> es pot accedir a la darrera versió de la documentació.</p>
 
 <h3 id="changelog:1f293efe93c0c1fbe8e6676dc3e2a771">Changelog</h3>
 
