--- a/destacats/comunicat-responsiu-web/index.html
+++ b/destacats/comunicat-responsiu-web/index.html
@@ -13,7 +13,7 @@
 
 	<script>
 		document.write("<meta name=\"titol\" content=\"Els comunicats del CS Canigó són responsius web\" />");
-		document.write("<meta name=\"description\" content=\"S\x27han aplicat canvis al format del comunicat amb l\x27objectiu de fer-lo responsiu. Tots els comunicats penjats al web i els que s\x27enviaran per correu d\x27ara en endavant permeten la visualització des de tablet i dispositius mòvils.\" />");
+		document.write("<meta name=\"description\" content=\"S\x27han aplicat canvis al format del comunicat amb l\x27objectiu de fer-lo responsiu. Tots els comunicats penjats al web i els que s\x27enviaran per correu d\x27ara endavant permeten la visualització des de tablet i dispositius mòbils\" />");
 	</script>
 
 	
