--- a/destacats/index.html
+++ b/destacats/index.html
@@ -363,7 +363,7 @@
         				
 
 						</h2>
-						<p> S'han aplicat canvis al format del comunicat amb l'objectiu de fer-lo responsiu. Tots els comunicats penjats al web i els que s'enviaran per correu d'ara en endavant permeten la visualització des de tablet i dispositius mòvils.</p>
+						<p> S'han aplicat canvis al format del comunicat amb l'objectiu de fer-lo responsiu. Tots els comunicats penjats al web i els que s'enviaran per correu d'ara endavant permeten la visualització des de tablet i dispositius mòbils</p>
 					</div>	
 
 
