--- a/cloud/caas/index.html
+++ b/cloud/caas/index.html
@@ -312,7 +312,7 @@
 <li><a href="http://bluemix.net">http://bluemix.net</a>, basat en cloud foundry</li>
 <li>Concepte xPaaS: buildpack/runtime, <a href="https://console.ng.bluemix.net/docs/cfapps/runtimes.html">https://console.ng.bluemix.net/docs/cfapps/runtimes.html</a></li>
 <li>Contenidors: Docker, Docker-compose</li>
-<li>DBaaS: ElasticSearch, MongoDB <br /><br /></li>
+<li>DBaaS: ElasticSearch, MongoDB, PostgreSQL <br /><br /></li>
 </ul></li>
 
 <li><p><strong>Azure</strong></p>
