--- a/centre-de-suport/roadmap/index.html
+++ b/centre-de-suport/roadmap/index.html
@@ -311,8 +311,35 @@
 
 					
 
-						<p>Aquest és el Roadmap del CS Canigó per als serveis Canigó, SIC i SGDE:
-<iframe src='//cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ycTBuP_02_fFQYHePMhAxAnNt70R4GyTP4phJn3EHi8&font=Default&lang=ca&initial_zoom=1&height=600&start_at_slide=17' width='100%' height='600' frameborder='0'></iframe></p>
+						<!--Aquest és el Roadmap del CS Canigó per als serveis Canigó, SIC i SGDE:
+<iframe src='//cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ycTBuP_02_fFQYHePMhAxAnNt70R4GyTP4phJn3EHi8&font=Default&lang=ca&initial_zoom=1&height=600&start_at_slide=17' width='100%' height='600' frameborder='0'></iframe-->
+
+<p><link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css" /></p>
+
+<script src="/js/sheet2array.js"></script>
+<script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+
+<div id='timeline-embed' style="width: 100%; height: 600px"></div>
+
+<script type="text/javascript">
+
+       $.getJSON("https://script.google.com/macros/s/AKfycbwXOwdyefmpRayODliduXDI2m0wCm_TKMiB_tQkkDDKaA4l9WQ/exec?callback=?", null, function(results){
+                
+                var additionalOptions = {
+                    start_at_slide: results.slide,
+                    timenav_height: 200,
+                    height : 650,
+                    initial_zoom: 12,
+                    language : "ca"
+                }               
+
+                console.log(additionalOptions)
+
+                timeline = new TL.Timeline('timeline-embed', 'https://docs.google.com/spreadsheets/d/1ycTBuP_02_fFQYHePMhAxAnNt70R4GyTP4phJn3EHi8/pubhtml', additionalOptions);
+       });
+
+
+</script>
 
 <p><em>Aquest Roadmap està subjecte a canvis</em></p>
 
