--- a/cloud/cataleg/index.html
+++ b/cloud/cataleg/index.html
@@ -492,7 +492,7 @@ default_versions:
 
 <ul>
 <li>MongoDB, disponible a <strong>cloud públic</strong></li>
-<li>ElasticSearch, disponible a <strong>cloud públic</strong> de l</li>
+<li>ElasticSearch, disponible a <strong>cloud públic</strong></li>
 </ul>
 
 
