--- a/cloud/cataleg/index.html
+++ b/cloud/cataleg/index.html
@@ -493,6 +493,7 @@ default_versions:
 <ul>
 <li>MongoDB, disponible a <strong>cloud públic</strong></li>
 <li>ElasticSearch, disponible a <strong>cloud públic</strong></li>
+<li>PostgreSQL, disponible a <strong>cloud públic</strong></li>
 </ul>
 
 
