--- a/content/drafts/radar.html
+++ b/content/drafts/radar.html
@@ -1,10 +1,8 @@
-<html>
-<head>
-  <meta charset="utf-8">
-</head>
-	<body>
-	  <link rel="import" href="https://radar.thoughtworks.com/?sheetId=https%3A%2F%2Fdocs.google.com%2Fspreadsheets%2Fd%2F1waDG0_W3-yNiAaUfxcZhTKvl7AUCgXwQw8mdPjCz86U%2Fpubhtml">
+
+
++++ date = "2017-07-14" title = "Radar CTTI" description = "Radar tecnològic del CTTI" sections = "Radar" taxonomies = [] toc = true weight = 5 +++
+
+Aquest és el Radar tecnològic
+<link rel="import" href="https://radar.thoughtworks.com/?sheetId=https%3A%2F%2Fdocs.google.com%2Fspreadsheets%2Fd%2F1waDG0_W3-yNiAaUfxcZhTKvl7AUCgXwQw8mdPjCz86U%2Fpubhtml">
 	  #document
-	  </link>
-	</body>
- </html>
+ </link>
