Changes to add last modified date automatically

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						
 
 						<li>
-							<a target='_self' class="dropdown-toggle" href='/cs/' data-toggle='_dropdown'>Centres de Suport</a>
+							<a target='_self' class="dropdown-toggle" href='/cs/' data-toggle='_dropdown'>Centre de Suport</a>
 						</li>
 
 						
