--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 					</div>
 					<div class="col-xs-12 hidden-xs" id="nomPortal">
-                    	<span class="titol-cap-nou">Arquitectura CTTI</span>
+                    	<span class="titol-cap-nou">Centre de Telecomunicacions i Tecnologies de la Informació</span>
                     </div>					
 					<ul class="nav navbar-nav">
 
